[BATCH] create a context menu components, create main sidebar component, fix sidebar on mobile, fix display backoffice main div, improve table footer display

--- a/assets/styles/forms.scss
+++ b/assets/styles/forms.scss
@@ -1,3 +1,7 @@
+form{
+  margin-bottom: 0 !important;
+}
+
 [type="checkbox"]{
   @apply rounded cursor-pointer border-2 border-primary-500 focus:ring-0 checked:bg-primary-500 checked:focus:bg-primary-500;
 }
